--- a/ArjunaJTA/maven/pom.xml
+++ b/ArjunaJTA/maven/pom.xml
@@ -19,6 +19,9 @@
     <packaging>jar</packaging>
     <name>basic maven example</name>
     <description>basic maven example</description>
+    <properties>
+      <version.narayana>5.2.18.Final-SNAPSHOT</version.narayana>
+    </properties>
     <repositories>
         <repository>
             <id>jboss-public-repository-group</id>
@@ -97,7 +100,7 @@ read this as the JBoss stack of the Java EE 6 Web Profile APIs) -->
         <dependency>
             <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>narayana-jta</artifactId>
-            <version>5.2.18.Final-SNAPSHOT</version>
+            <version>${version.narayana}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
