--- a/ArjunaJTS/jts/pom.xml
+++ b/ArjunaJTS/jts/pom.xml
@@ -53,7 +53,7 @@
       <dependency>
         <groupId>org.jboss.narayana.quickstarts</groupId>
         <artifactId>jboss-as-jts-application-component-2</artifactId>
-        <version>5.2.18.Final-SNAPSHOT</version>
+        <version>${project.version}</version>
         <classifier>client</classifier>
       </dependency>
     </dependencies>
