--- a/rts/at/service/service1b/pom.xml
+++ b/rts/at/service/service1b/pom.xml
@@ -51,6 +51,8 @@
             maven repository. -->
         <!-- <version.jboss.spec.javaee.6.0>3.0.2.Final-redhat-2</version.jboss.spec.javaee.6.0> -->
 
+        <version.narayana>5.2.18.Final-SNAPSHOT</version.narayana>
+
         <!-- other plugin versions -->
         <version.compiler.plugin>3.1</version.compiler.plugin>
         <version.war.plugin>2.1.1</version.war.plugin>
@@ -101,7 +103,7 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
-            <version>5.2.18.Final-SNAPSHOT</version>
+            <version>${version.narayana}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -175,7 +177,7 @@
                 <dependency>
                     <groupId>org.jboss.narayana.rts</groupId>
                     <artifactId>restat-util</artifactId>
-                    <version>5.2.18.Final-SNAPSHOT</version>
+                    <version>${version.narayana}</version>
                 </dependency>
             </dependencies>
             <build>
@@ -196,7 +198,7 @@
                             <dependency>
                                 <groupId>org.jboss.narayana.rts</groupId>
                                 <artifactId>restat-util</artifactId>
-                                <version>5.2.18.Final-SNAPSHOT</version>
+                                <version>${version.narayana}</version>
                             </dependency>
                         </dependencies>
                         <configuration>
