--- a/rts/at/undertow/pom.xml
+++ b/rts/at/undertow/pom.xml
@@ -26,7 +26,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <rts.version>${project.version}</rts.version>
+        <version.narayana>5.2.18.Final-SNAPSHOT</version.narayana>
         <version.org.jboss.logging.jboss-logging>3.2.1.Final</version.org.jboss.logging.jboss-logging>
         <undertow.io.version>1.3.0.Beta6</undertow.io.version>
         <resteasy.version>3.0.11.Final</resteasy.version>
@@ -50,17 +50,17 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
-            <version>${rts.version}</version>
+            <version>${version.narayana}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-api</artifactId>
-            <version>${rts.version}</version>
+            <version>${version.narayana}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.arjunacore</groupId>
             <artifactId>arjunacore</artifactId>
-            <version>${project.version}</version>
+            <version>${version.narayana}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
