Making Narayana version configurable to run the quickstarts with
Changing pom.xml files to not have hardcoded version for Narayana plus
unifying the name of property that is used for setting of the Narayana
dependency version to 'version.narayana'.

--- a/ArjunaJTS/trailmap/pom.xml
+++ b/ArjunaJTS/trailmap/pom.xml
@@ -19,6 +19,9 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
+    <properties>
+        <version.narayana>5.3.3.Final-SNAPSHOT</version.narayana>
+    </properties>
     <repositories>
         <repository>
             <id>jboss-public-repository-group</id>
@@ -36,7 +39,7 @@
         <dependency>
             <groupId>org.jboss.narayana.jts</groupId>
             <artifactId>narayana-jts-jacorb</artifactId>
-            <version>5.3.3.Final-SNAPSHOT</version>
+            <version>${version.narayana}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.transaction</groupId>
