--- a/blacktie/jatmibroker-xatmi/mdb-xatmi-service/ear/pom.xml
+++ b/blacktie/jatmibroker-xatmi/mdb-xatmi-service/ear/pom.xml
@@ -103,7 +103,7 @@
         <dependency>
             <groupId>org.jboss.narayana.blacktie.quickstarts</groupId>
             <artifactId>blacktie-quickstarts-mdb-xatmi-service</artifactId>
-            <version>5.3.3.Final-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
