--- a/STM/pessimistic/pom.xml
+++ b/STM/pessimistic/pom.xml
@@ -18,6 +18,9 @@
 	<artifactId>pessimistic</artifactId>
 	<version>5.3.3.Final-SNAPSHOT</version>
 	<packaging>jar</packaging>
+        <properties>
+                <version.narayana>5.3.3.Final-SNAPSHOT</version.narayana>
+        </properties>
 	<repositories>
 		<repository>
 			<id>jboss-public-repository-group</id>
@@ -61,7 +64,7 @@
 		<dependency>
 			<groupId>org.jboss.narayana.stm</groupId>
 			<artifactId>stm</artifactId>
-			<version>5.3.3.Final-SNAPSHOT</version>
+                        <version>${version.narayana}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
