--- a/blacktie/integration1/ejb/ear/pom.xml
+++ b/blacktie/integration1/ejb/ear/pom.xml
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>org.jboss.narayana.blacktie.quickstarts</groupId>
             <artifactId>blacktie-quickstarts-integration1-ejb</artifactId>
-            <version>5.3.3.Final-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
