--- a/jta-and-hibernate/pom.xml
+++ b/jta-and-hibernate/pom.xml
@@ -39,7 +39,7 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
         <version.maven-surefire-plugin>2.19.1</version.maven-surefire-plugin>
-        <version.org.jboss.narayana>${project.version}</version.org.jboss.narayana>
+        <version.narayana>5.3.3.Final-SNAPSHOT</version.narayana>
         <version.org.jboss.spec.javax.transaction>1.0.0.Final</version.org.jboss.spec.javax.transaction>
         <version.org.jboss.naming>5.0.3.GA</version.org.jboss.naming>
         <version.org.jboss.logging.jboss-logging>3.1.2.GA</version.org.jboss.logging.jboss-logging>
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>narayana-jta</artifactId>
-            <version>${version.org.jboss.narayana}</version>
+            <version>${version.narayana}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.jboss.logmanager</groupId>
